small update with endpoints and cors for another project
